Фикс логики управления системными ролями и правами доступа. Перенаправление аудита пользовательских действий из бд в лог файл
